# vallejo-ibco-ca

./: .env.example  .env.production.example  .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  IBCO_IMPLEMENTATION_MASTER.md  IMPLEMENTATION_SUMMARY_THREE_TIER_CAFR.md  METHODOLOGY.md  README.md  WAVE_TWO_ROADMAP.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
data/: README.md
data/raw/: README.md
data/samples/: expenditures_template.csv  fund_balance_template.csv  pensions_template.csv  revenues_template.csv
docs/: API_USAGE_GUIDE.md  DEVELOPER_GUIDE.md  LEGAL_DEFENSE_PLAYBOOK.md  PROMPT_7.1_SUMMARY.md  PROMPT_7.4_SUMMARY.md  PROMPT_8.1_SUMMARY.md  QUICKSTART_THREE_TIER_DATA_ENTRY.md  README.md  api_authentication_guide.md  data_entry_workflow.md  data_lineage_guide.md  data_refresh_workflow.md  three_tier_cafr_data_structure.md
docs/legal/: DEAD_MANS_SWITCH_INTEGRATION.md  anti_slapp_motion_template.md  cease_and_desist_response_template.md  eff_aclu_notification_template.md
examples/: curl_commands.sh  data_analysis.ipynb  fetch_risk_scores.js  python_client.py
infrastructure/docker/: Dockerfile.api  Dockerfile.worker
infrastructure/grafana-dashboards/: README.md
infrastructure/monitoring/: alerting_rules.yml  alertmanager.yml  grafana-datasources.yml  prometheus.yml
infrastructure/nginx/: nginx.conf
scripts/: run_tests.sh
scripts/admin/: generate_api_token.py
scripts/analysis/: calculate_historical_risk_scores.py  generate_projections.py
scripts/communications/: email_alerts.py  press_release_template.py
scripts/data_entry/: import_cafr_manual.py  import_cafr_three_tier.py  import_calpers_manual.py
scripts/deploy/: deploy.sh  smoke-test.sh
scripts/docs/: generate_api_reference.py
scripts/legal/: generate_anti_slapp_response.py
scripts/maintenance/: backup_database.sh  refresh_report.py  schedule_refresh.py
scripts/reports/: decision_impact_report.py  generate_lineage_report.py  legal_incident_report.py  publish_quarterly_report.py  review_report.py
scripts/seed_data/: seed_pension_categories.py
scripts/setup/: init_dev_environment.sh  install_git_hooks.sh  verify_environment.py
scripts/validation/: detect_restatement_discrepancies.py  generate_quality_report.py  validate_data_integrity.py
src/: __init__.py
src/analytics/: decision_impact.py  lineage_tracer.py
src/analytics/projections/: __init__.py  expenditure_model.py  revenue_model.py  scenario_engine.py
src/analytics/risk_scoring/: indicators.py  scoring_engine.py
src/api/: dependencies.py  main.py
src/api/auth/: tokens.py
src/api/middleware/: authentication.py  rate_limiting.py
src/api/v1/routes/: cities.py  decisions.py  financial.py  health.py  lineage.py  metadata.py  notifications.py  projections.py  risk.py
src/api/v1/routes/admin/: __init__.py  decisions.py  legal_incidents.py  quality_dashboard.py  refresh_status.py  stakeholder_list.py  tokens.py  validation_workflow.py
src/api/v1/schemas/: city.py  civic.py  common.py  financial.py  legal.py  projections.py  risk.py  stakeholders.py
src/config/: __init__.py  database.py  logging_config.py  observability.py  settings.py
src/dashboard/: README.md
src/dashboard/metabase/: README.md
src/dashboard/metabase/dashboards/: fiscal_projections.json  peer_comparison.json  pension_analysis.json  vallejo_fiscal_overview.json
src/dashboard/metabase/scripts/: create_readonly_user.sql  export_dashboards.py  import_dashboards.py  requirements.txt  setup_metabase.sh
src/data_pipeline/orchestration/: refresh_workflows.py
src/data_quality/: __init__.py  anomaly_detection.py  quality_metrics.py  validators.py
src/database/: __init__.py  base.py
src/database/migrations/: env.py
src/database/migrations/versions/: a8c5d7e1f4b2_enhance_data_lineage_fields.py  b9d6e8f2g5c3_add_validation_workflow.py  c1d7e9f3h6d4_add_civic_decision_tracking.py  d2e8f0g4i7e5_add_stakeholder_communications.py  ea4a6621450b_initial_schema.py  f3b7c8d9e2a1_add_data_refresh_models.py  g4c9e1f5j8f6_add_three_tier_cafr_tracking.py
src/database/models/: __init__.py  civic.py  core.py  financial.py  legal.py  pensions.py  projections.py  refresh.py  risk.py  stakeholders.py  validation.py
src/reports/generators/: __init__.py  base_generator.py  fiscal_summary_report.py  projection_scenario_report.py  risk_narrative.py
src/reports/templates/: base.html  risk_narrative.html
src/utils/: email_notifications.py  lineage_helpers.py
tests/: __init__.py  conftest.py  test_lineage_system.py  test_refresh_workflows.py
tests/integration/: test_api_endpoints.py  test_data_import.py
tests/unit/: test_risk_indicators.py  test_risk_scoring_engine.py
